--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 markdown: kramdown
-title: Gerenciando el Proceso de Innovación
+title: Anemia en el Perú
 description: Ingeniería Biomédica PUCP-UPCH
 show_downloads: true
 
